# doracxx

./: .gitignore  INSTALLATION.md  MANIFEST.in  README.md  Taskfile.yml  doracxx.toml  pyproject.toml  test_static_linking.py
doracxx/: __init__.py  build-cxx-node.py  build_cxx_node.py  cache.py  cli.py  config.py  dependencies.py  prepare-dora.py  prepare_arrow.py  prepare_dora.py
examples/: README.md  dataflow.yml
examples/arrow-node/: README.md  doracxx.toml
examples/arrow-node/include/: arrow_processor.h
examples/arrow-node/src/: node.cc
examples/simple-node/: doracxx.toml  test_eigen.cpp
examples/simple-node/include/: simple_processor.h
examples/simple-node/src/: node.cc
tests/: run_all_tests.py  test_basic.py  test_mock.py  test_system.py  validate_arrow.py
